--- a/index.html
+++ b/index.html
@@ -5,7 +5,191 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    /* ... Estilos iguales, sin cambios ... */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+
+    header {
+      background-color: #66e0d4;
+      padding: 1em;
+      text-align: center;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #company-logo {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+
+    #categorias-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      margin-top: 10px;
+      padding: 5px;
+      width: 100%;
+    }
+
+    .categoria-boton {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 15px;
+      margin: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      white-space: nowrap;
+    }
+
+    .categoria-boton:hover {
+      background-color: #005f99;
+    }
+
+    #productos-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 12px;
+      padding: 20px;
+      justify-items: center;
+    }
+
+    .producto-tarjeta {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 12px;
+      width: 150px;
+      text-align: center;
+      background-color: white;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      position: relative;
+    }
+
+    .producto-imagen {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+
+    .producto-nombre {
+      font-size: 14px;
+      margin: 6px 0;
+      color: #333;
+    }
+
+    .producto-precio {
+      font-size: 13px;
+      color: #666;
+    }
+
+    .producto-categoria {
+      font-size: 12px;
+      color: #999;
+    }
+
+    .producto-boton {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background-color: #007acc;
+      border: none;
+      border-radius: 50%;
+      color: white;
+      width: 30px;
+      height: 30px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    #carrito {
+      padding: 20px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+    }
+
+    #botonAdmin {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 24px;
+      background: #007acc;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 400px;
+      position: relative;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      cursor: pointer;
+    }
+
+    .admin-button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+      background-color: #66e0d4;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .input-edit {
+      width: 100%;
+      margin: 5px 0;
+    }
+
+    @media screen and (min-width: 600px) {
+      #productos-container {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      }
+    }
   </style>
 
   <!-- Firebase SDKs -->
@@ -33,12 +217,8 @@
       const carritoRef = database.ref('carrito');
       const logoRef = database.ref('logo');
 
-      let productos = {};
-      let carrito = [];
-      let categoriaSeleccionada = "todas";
-
       productosRef.on('value', (snapshot) => {
-        productos = snapshot.val() || {};
+        productos = snapshot.val() || [];
         actualizarVista();
       });
 
@@ -55,30 +235,32 @@
       });
 
       function agregarProducto(nuevoProducto) {
-        const nuevoKey = productosRef.push().key;
-        productosRef.child(nuevoKey).set(nuevoProducto);
+        productos.push(nuevoProducto);
+        productosRef.set(productos);
       }
 
-      function agregarAlCarrito(key) {
-        const producto = productos[key];
-        carrito.push(producto);
+      function agregarAlCarrito(index) {
+        carrito.push(productos[index]);
         carritoRef.set(carrito);
       }
 
-      function eliminarProducto(key) {
-        productosRef.child(key).remove();
+      function eliminarProducto(index) {
+        productos.splice(index, 1);
+        productosRef.set(productos);
       }
 
-      function editarProducto(key, campo, valor) {
-        productosRef.child(key).update({ [campo]: valor });
+      function editarProducto(index, campo, valor) {
+        productos[index][campo] = valor;
+        productosRef.set(productos);
       }
 
-      function editarImagen(key, input) {
+      function editarImagen(index, input) {
         const file = input.files[0];
         if (file) {
           const reader = new FileReader();
           reader.onloadend = () => {
-            productosRef.child(key).update({ imagen: reader.result });
+            productos[index].imagen = reader.result;
+            productosRef.set(productos);
           };
           reader.readAsDataURL(file);
         }
@@ -114,6 +296,10 @@
       const productosAgregados = document.getElementById("productos-agregados");
       const categoriasContainer = document.getElementById("categorias-container");
 
+      let productos = [];
+      let carrito = [];
+      let categoriaSeleccionada = "todas";
+
       botonAdmin.onclick = () => modal.style.display = "block";
       span.onclick = () => modal.style.display = "none";
       window.onclick = e => { if (e.target === modal) modal.style.display = "none"; };
@@ -144,36 +330,41 @@
         productosAgregados.innerHTML = '';
         actualizarBotonesCategorias();
 
-        const productosFiltrados = Object.entries(productos).filter(([_, p]) =>
-          categoriaSeleccionada === "todas" || p.categoria === categoriaSeleccionada
-        );
+        const productosFiltrados = categoriaSeleccionada === "todas"
+          ? productos
+          : productos.filter(p => p.categoria === categoriaSeleccionada);
 
-        productosFiltrados.forEach(([key, producto]) => {
-          productosContainer.innerHTML += `
-            <div class="producto-tarjeta">
-              <img src="${producto.imagen}" class="producto-imagen">
-              <div class="producto-nombre">${producto.nombre}</div>
-              <div class="producto-precio">$${producto.precio}</div>
-              <div class="producto-categoria">${producto.categoria}</div>
-              <button class="producto-boton" onclick="agregarAlCarrito('${key}')">🛒</button>
-            </div>`;
+        productosFiltrados.forEach((producto, index) => {
+          const tarjeta = document.createElement("div");
+          tarjeta.className = "producto-tarjeta";
+          tarjeta.innerHTML = `
+            <img src="${producto.imagen}" class="producto-imagen">
+            <div class="producto-nombre">${producto.nombre}</div>
+            <div class="producto-precio">$${producto.precio}</div>
+            <div class="producto-categoria">${producto.categoria}</div>
+            <button class="producto-boton">🛒</button>
+          `;
+          tarjeta.querySelector(".producto-boton").onclick = () => agregarAlCarrito(productos.indexOf(producto));
+          productosContainer.appendChild(tarjeta);
         });
 
-        Object.entries(productos).forEach(([key, producto]) => {
-          productosAgregados.innerHTML += `
-            <div class="producto-tarjeta">
-              <img src="${producto.imagen}" class="producto-imagen">
-              <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto('${key}', 'nombre', this.value)">
-              <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto('${key}', 'precio', this.value)">
-              <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto('${key}', 'categoria', this.value)">
-              <input class="input-edit" type="file" accept="image/*" onchange="editarImagen('${key}', this)">
-              <button class="admin-button" onclick="eliminarProducto('${key}')">Eliminar</button>
-            </div>`;
+        productos.forEach((producto, index) => {
+          const tarjetaAdmin = document.createElement("div");
+          tarjetaAdmin.className = "producto-tarjeta";
+          tarjetaAdmin.innerHTML = `
+            <img src="${producto.imagen}" class="producto-imagen">
+            <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
+            <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
+            <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
+            <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
+            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
+          `;
+          productosAgregados.appendChild(tarjetaAdmin);
         });
       }
 
       function actualizarBotonesCategorias() {
-        const categorias = ["todas", ...new Set(Object.values(productos).map(p => p.categoria))];
+        const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
         categoriasContainer.innerHTML = categorias.map(cat => 
           <button class="categoria-boton" onclick="filtrarCategoria('${cat}')">${cat}</button>).join('');
       }
@@ -193,12 +384,6 @@
         categoriaSeleccionada = categoria;
         actualizarVista();
       }
-
-      // Hacer funciones globales
-      window.agregarAlCarrito = agregarAlCarrito;
-      window.eliminarProducto = eliminarProducto;
-      window.editarProducto = editarProducto;
-      window.editarImagen = editarImagen;
     });
   </script>
 </head>
@@ -219,7 +404,6 @@
     </section>
   </main>
 
-  <!-- Modal -->
   <div id="adminModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
