--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics-compat.js"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function() {
+      // Configuración de tu proyecto
       const firebaseConfig = {
         apiKey: "AIzaSyCpHYnWuWp7sb9P-HR6rEMg7fg9Xigl-lA",
         authDomain: "sorpresasinstyle-2664b.firebaseapp.com",
@@ -209,13 +210,97 @@
         measurementId: "G-82WQ2NKVLQ"
       };
 
+      // Inicializar Firebase
       const app = firebase.initializeApp(firebaseConfig);
       const database = firebase.database();
       const analytics = firebase.analytics(app);
 
+      // Referencias a la base de datos
       const productosRef = database.ref('productos');
       const carritoRef = database.ref('carrito');
       const logoRef = database.ref('logo');
+
+      // Escuchar cambios en productos
+      productosRef.on('value', (snapshot) => {
+        productos = snapshot.val() || [];
+        actualizarVista();
+      });
+
+      // Escuchar cambios en carrito
+      carritoRef.on('value', (snapshot) => {
+        carrito = snapshot.val() || [];
+        actualizarCarrito();
+      });
+
+      // Escuchar cambios en el logo
+      logoRef.on('value', (snapshot) => {
+        const logoUrl = snapshot.val();
+        if (logoUrl) {
+          document.getElementById("company-logo").src = logoUrl;
+        }
+      });
+
+      // Agregar producto a la base de datos
+      function agregarProducto(nuevoProducto) {
+        productos.push(nuevoProducto);
+        productosRef.set(productos);
+      }
+
+      // Agregar al carrito en la base de datos
+      function agregarAlCarrito(index) {
+        carrito.push(productos[index]);
+        carritoRef.set(carrito);
+      }
+
+      // Eliminar producto de la base de datos
+      function eliminarProducto(index) {
+        productos.splice(index, 1);
+        productosRef.set(productos);
+      }
+
+      // Editar producto en la base de datos
+      function editarProducto(index, campo, valor) {
+        productos[index][campo] = valor;
+        productosRef.set(productos);
+      }
+
+      // Editar imagen del producto en la base de datos
+      function editarImagen(index, input) {
+        const file = input.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onloadend = () => {
+            productos[index].imagen = reader.result;
+            productosRef.set(productos);
+          };
+          reader.readAsDataURL(file);
+        }
+      }
+
+      // Cambiar logo en la base de datos
+      function cambiarLogo() {
+        const input = document.getElementById("logoInput").files[0];
+        if (input) {
+          const reader = new FileReader();
+          reader.onloadend = function () {
+            const logoUrl = reader.result;
+            document.getElementById("company-logo").src = logoUrl;
+            logoRef.set(logoUrl);
+          };
+          reader.readAsDataURL(input);
+        }
+      }
+
+      // Comprar y vaciar carrito en la base de datos
+      function comprar() {
+        if (carrito.length) {
+          alert("¡Gracias por tu compra!");
+          carrito = [];
+          carritoRef.set(carrito);
+        } else {
+          alert("Tu carrito está vacío.");
+        }
+      }
 
       const modal = document.getElementById("adminModal");
       const botonAdmin = document.getElementById("botonAdmin");
@@ -242,31 +327,15 @@
         if (imagen) {
           const reader = new FileReader();
           reader.onloadend = function () {
-            const nuevoProducto = { nombre, precio, categoria, imagen: reader.result };
-            productos.push(nuevoProducto);
-            productosRef.set(productos);
+            const nuevoProducto = {
+              nombre, precio, categoria, imagen: reader.result
+            };
+            agregarProducto(nuevoProducto);
           };
           reader.readAsDataURL(imagen);
         }
 
         this.reset();
-      });
-
-      productosRef.on('value', (snapshot) => {
-        productos = snapshot.val() || [];
-        actualizarVista();
-      });
-
-      carritoRef.on('value', (snapshot) => {
-        carrito = snapshot.val() || [];
-        actualizarCarrito();
-      });
-
-      logoRef.on('value', (snapshot) => {
-        const logoUrl = snapshot.val();
-        if (logoUrl) {
-          document.getElementById("company-logo").src = logoUrl;
-        }
       });
 
       function actualizarVista() {
@@ -278,40 +347,35 @@
           ? productos
           : productos.filter(p => p.categoria === categoriaSeleccionada);
 
-        productosFiltrados.forEach((producto) => {
-          const indexReal = productos.indexOf(producto);
-          const tarjeta = document.createElement("div");
-          tarjeta.className = "producto-tarjeta";
-          tarjeta.innerHTML = `
-            <img src="${producto.imagen}" class="producto-imagen">
-            <div class="producto-nombre">${producto.nombre}</div>
-            <div class="producto-precio">$${producto.precio}</div>
-            <div class="producto-categoria">${producto.categoria}</div>
-            <button class="producto-boton">🛒</button>
-          `;
-          tarjeta.querySelector(".producto-boton").onclick = () => agregarAlCarrito(indexReal);
-          productosContainer.appendChild(tarjeta);
+        productosFiltrados.forEach((producto, index) => {
+          const tarjeta = `
+            <div class="producto-tarjeta">
+              <img src="${producto.imagen}" class="producto-imagen">
+              <div class="producto-nombre">${producto.nombre}</div>
+              <div class="producto-precio">$${producto.precio}</div>
+              <div class="producto-categoria">${producto.categoria}</div>
+              <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
+            </div>`;
+          productosContainer.innerHTML += tarjeta;
         });
 
         productos.forEach((producto, index) => {
-          const tarjeta = document.createElement("div");
-          tarjeta.className = "producto-tarjeta";
-          tarjeta.innerHTML = `
-            <img src="${producto.imagen}" class="producto-imagen">
-            <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
-            <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
-            <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
-            <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
-            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
-          `;
-          productosAgregados.appendChild(tarjeta);
+          productosAgregados.innerHTML += `
+            <div class="producto-tarjeta">
+              <img src="${producto.imagen}" class="producto-imagen">
+              <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
+              <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
+              <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
+              <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
+              <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
+            </div>`;
         });
       }
 
       function actualizarBotonesCategorias() {
         const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
-        categoriasContainer.innerHTML = categorias.map(cat =>
-          <button class="categoria-boton" onclick="filtrarCategoria('${cat}')">${cat}</button>).join('');
+        categoriasContainer.innerHTML = categorias.map(cat => 
+          `<button class="categoria-boton" onclick="filtrarCategoria('${cat}')">${cat}</button>`).join('');
       }
 
       function actualizarCarrito() {
@@ -319,65 +383,15 @@
         listaCarrito.innerHTML = '';
         let total = 0;
         carrito.forEach(p => {
-          listaCarrito.innerHTML += <li>${p.nombre} - $${p.precio}</li>;
+          listaCarrito.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
           total += parseFloat(p.precio);
         });
         document.getElementById("total").textContent = total.toFixed(2);
       }
 
-      window.filtrarCategoria = function (categoria) {
+      function filtrarCategoria(categoria) {
         categoriaSeleccionada = categoria;
         actualizarVista();
-      }
-
-      window.agregarAlCarrito = function (index) {
-        carrito.push(productos[index]);
-        carritoRef.set(carrito);
-      }
-
-      window.eliminarProducto = function (index) {
-        productos.splice(index, 1);
-        productosRef.set(productos);
-      }
-
-      window.editarProducto = function (index, campo, valor) {
-        productos[index][campo] = valor;
-        productosRef.set(productos);
-      }
-
-      window.editarImagen = function (index, input) {
-        const file = input.files[0];
-        if (file) {
-          const reader = new FileReader();
-          reader.onloadend = () => {
-            productos[index].imagen = reader.result;
-            productosRef.set(productos);
-          };
-          reader.readAsDataURL(file);
-        }
-      }
-
-      window.cambiarLogo = function () {
-        const input = document.getElementById("logoInput").files[0];
-        if (input) {
-          const reader = new FileReader();
-          reader.onloadend = function () {
-            const logoUrl = reader.result;
-            document.getElementById("company-logo").src = logoUrl;
-            logoRef.set(logoUrl);
-          };
-          reader.readAsDataURL(input);
-        }
-      }
-
-      window.comprar = function () {
-        if (carrito.length) {
-          alert("¡Gracias por tu compra!");
-          carrito = [];
-          carritoRef.set(carrito);
-        } else {
-          alert("Tu carrito está vacío.");
-        }
       }
     });
   </script>
@@ -399,6 +413,7 @@
     </section>
   </main>
 
+  <!-- Modal -->
   <div id="adminModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
